@@ -465,6 +465,7 @@ extern sym_link *validateLink(sym_link  *l,
 /* type check macros */
 #define IS_DECL(x)       ( x && x->class == DECLARATOR )
 #define IS_SPEC(x)       ( x && x->class == SPECIFIER  )
+
 #define IS_ARRAY(x)      (IS_DECL(x) && DCL_TYPE(x) == ARRAY)
 #define IS_DATA_PTR(x)   (IS_DECL(x) && DCL_TYPE(x) == POINTER)
 #define IS_PTR(x)        (IS_DECL(x) && (DCL_TYPE(x) == POINTER    ||    \
@@ -519,6 +520,8 @@ extern sym_link *validateLink(sym_link  *l,
 #define IS_LITERAL(x)    (IS_SPEC(x)  && x->select.s.sclass == S_LITERAL)
 #define IS_CODE(x)       (IS_SPEC(x)  && SPEC_SCLS(x) == S_CODE)
 #define IS_REGPARM(x)    (IS_SPEC(x) && SPEC_REGPARM(x))
+
+#define IS_VALID_PARAMETER_STORAGE_CLASS_SPEC(x)    (IS_SPEC(x) && (!SPEC_TYPEDEF(x) && !SPEC_EXTR(x) && !SPEC_STAT(x) && SPEC_SCLS(x) != S_AUTO))
 
 /* symbol check macros */
 #define IS_AUTO(x)       (x->level && !IS_STATIC(x->etype) && !IS_EXTERN(x->etype))
