@@ -1,3 +1,9 @@
+2010-05-23 Borut Razem <borut.razem AT siol.net>
+
+	* src/SDCCerr.c, src/SDCCerr.h, src/SDCCsymt.h, src/SDCC.y:
+	  fixed bug #2811521: sdcc doesn't accept register storage class
+	  specifier in func
+
 2010-05-21 Philipp Klaus Krause <pkk AT spth.de>
 	* src/mcs51/gen.c,
 	  src/z80/gen.c,
